projects page – fix spacing, clean up files

--- a/src/styles/ProjectCard.module.scss
+++ b/src/styles/ProjectCard.module.scss
@@ -24,7 +24,7 @@
 	align-items: flex-start;
 	height: 180px;
 	justify-content: space-between;
-	padding: 0.2rem 1rem 0 0;
+	padding-left: 1.5rem;
 }
 
 .projectLinks {
